Notebooks, link to notebooks in gh-pages docs

--- a/notebooks/plotting.ipynb
+++ b/notebooks/plotting.ipynb
@@ -1,13 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Floor plans for the histopathology lab\n",
+    "\n",
+    "This notebook plots floor plans for the histopathology lab at Addenbrooke's Hospital, Cambridge,\n",
+    "UK."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from histopath_bim_des.bim import BimModel"
    ]
   },
