--- a/notebooks/runner_times_base.ipynb
+++ b/notebooks/runner_times_base.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Runner Times: base scenario"
+    "# Runner Times: base scenario\n",
+    "\n",
+    "THis notebook shows the connections between doors in the histopathology lab as a graph,\n",
+    "and computes the runner time between stages based on this logical graph, based on the given\n",
+    "configuration."
    ]
   },
   {
