--- a/notebooks/runner_times_lift_down.ipynb
+++ b/notebooks/runner_times_lift_down.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Runner Times: lift-down scenario"
+    "# Runner Times: lift-down scenario\n",
+    "\n",
+    "\n",
+    "THis notebook shows the connections between doors in the histopathology lab as a graph,\n",
+    "and computes the runner time between stages based on this logical graph, based on the given\n",
+    "configuration.\n",
+    "\n",
+    "In this particular configuration, the lift is out of order, making the stairs the only connection\n",
+    "between Levels 3 and 4 (first and second floors) of the histopathology lab."
    ]
   },
   {
