Update config_compare notebook

--- a/notebooks/config_compare.ipynb
+++ b/notebooks/config_compare.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison of scenarios\n",
+    "\n",
+    "In this notebook, we simulate the histopathology lab under a base scenario and a \"lift-down\"\n",
+    "scenario where the lift connecting the two floors of the lab is out of order. For further\n",
+    "analysis of the two scenarios, see the two `runner_times_` notebooks.\n",
+    "\n",
+    "## Load configs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -165,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulation of Base config"
+    "## Simulation of Base config"
    ]
   },
   {
@@ -226,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulation of lift-down config"
+    "## Simulation of lift-down config"
    ]
   },
   {
@@ -287,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison"
+    "## Comparison"
    ]
   },
   {
@@ -326,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What is the proportion of specimens completed (reception to QC) within 7, 10, 14, or 21 days?**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -342,6 +362,8 @@
     }
    ],
    "source": [
+    "# Base scenario\n",
+    "\n",
     "means1 = np.mean(mat1, axis=0)\n",
     "means1"
    ]
@@ -363,6 +385,8 @@
     }
    ],
    "source": [
+    "# Lift-down scenario\n",
+    "\n",
     "means2 = np.mean(mat2, axis=0)\n",
     "means2"
    ]
@@ -384,6 +408,8 @@
     }
    ],
    "source": [
+    "# Confidence interval half-width, base scenario\n",
+    "\n",
     "ci1 = [\n",
     "    stats.t.interval(0.95, loc=np.mean(x:=mat1[:,col]), scale=stats.sem(x), df=len(x))\n",
     "    for col in range(4)\n",
@@ -409,12 +435,21 @@
     }
    ],
    "source": [
+    "# Confidence interval half-width, lift-down scenario\n",
+    "\n",
     "ci2 = [\n",
     "    stats.t.interval(0.95, loc=np.mean(x:=mat2[:,col]), scale=stats.sem(x), df=len(x))\n",
     "    for col in range(4)\n",
     "]\n",
     "yerr2 = np.array([v[1] for v in ci2])-means2\n",
     "yerr2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plot the lab TAT distribution for the two scenarios:**"
    ]
   },
   {
@@ -471,6 +506,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mean lab TATs**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -511,6 +553,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -529,68 +578,6 @@
     "\n",
     "with open('outputs/config_compare_lift_down.specimens.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(specimen_datas2, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14644"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(specimen_datas[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'source': 'Internal',\n",
-       " 'priority': 'ROUTINE',\n",
-       " 'reception_start': 1111.1797935985203,\n",
-       " 'reception_end': 1111.566197289564,\n",
-       " 'cutup_start': 1111.6048799233783,\n",
-       " 'cutup_type': 'Large specimens',\n",
-       " 'num_blocks': 4,\n",
-       " 'cutup_end': 1113.777448285854,\n",
-       " 'processing_start': 1186.6196833013535,\n",
-       " 'processing_end': 1210.938175018628,\n",
-       " 'microtomy_start': 1213.1354427997985,\n",
-       " 'total_slides': 12,\n",
-       " 'microtomy_end': 1215.2238445373514,\n",
-       " 'staining_start': 1216.1988229602682,\n",
-       " 'staining_end': 1263.777355903756,\n",
-       " 'labelling_start': 1264.6402221273631,\n",
-       " 'labelling_end': 1264.7300336722797,\n",
-       " 'scanning_start': 1265.1209646205587,\n",
-       " 'scanning_end': 1281.0749646064507,\n",
-       " 'qc_start': 1281.169468589424,\n",
-       " 'qc_end': 1286.1559761118367,\n",
-       " 'report_start': 1287.1286549861468,\n",
-       " 'report_end': 1357.69563609433}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "specimen_datas[0]['specimen.10000']"
    ]
   },
   {
