--- a/notebooks/runner_times_lift_down.ipynb
+++ b/notebooks/runner_times_lift_down.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel.write_table(df, runner_cfg_path, 'Runner Times output', 'tableRunnerTimes')"
+    "# excel.write_table(df, runner_cfg_path, 'Runner Times output', 'tableRunnerTimes')"
    ]
   },
   {
