add erdantic generation to notebook

--- a/notebooks/dev/test_config.ipynb
+++ b/notebooks/dev/test_config.ipynb
@@ -26,6 +26,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import erdantic\n",
+    "\n",
+    "erdantic.draw(Config, out='Config.erd.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
