--- a/notebooks/runner_times_base.ipynb
+++ b/notebooks/runner_times_base.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,31 +343,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axis.YTick at 0x7f515c128290>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d344e00>,\n",
-       " <matplotlib.axis.YTick at 0x7f515cff4e60>,\n",
-       " <matplotlib.axis.YTick at 0x7f515c6c8290>,\n",
-       " <matplotlib.axis.YTick at 0x7f515ccee8a0>,\n",
-       " <matplotlib.axis.YTick at 0x7f515cc20e60>,\n",
-       " <matplotlib.axis.YTick at 0x7f515c9dd880>,\n",
-       " <matplotlib.axis.YTick at 0x7f515ccefe00>,\n",
-       " <matplotlib.axis.YTick at 0x7f515c9dc380>,\n",
-       " <matplotlib.axis.YTick at 0x7f515c90eb40>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d33cc50>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d33d880>,\n",
-       " <matplotlib.axis.YTick at 0x7f515c90f860>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d33d580>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d33c320>,\n",
-       " <matplotlib.axis.YTick at 0x7f515d3dd640>]"
+       "[<matplotlib.axis.YTick at 0x724140e4d220>,\n",
+       " <matplotlib.axis.YTick at 0x724140e4ca70>,\n",
+       " <matplotlib.axis.YTick at 0x724141e12210>,\n",
+       " <matplotlib.axis.YTick at 0x724140e17da0>,\n",
+       " <matplotlib.axis.YTick at 0x724140998b90>,\n",
+       " <matplotlib.axis.YTick at 0x72414099a990>,\n",
+       " <matplotlib.axis.YTick at 0x72414099b350>,\n",
+       " <matplotlib.axis.YTick at 0x72414099bce0>,\n",
+       " <matplotlib.axis.YTick at 0x7241409ec650>,\n",
+       " <matplotlib.axis.YTick at 0x72414099a360>,\n",
+       " <matplotlib.axis.YTick at 0x7241409eccb0>,\n",
+       " <matplotlib.axis.YTick at 0x7241409ed670>,\n",
+       " <matplotlib.axis.YTick at 0x7241409edfa0>,\n",
+       " <matplotlib.axis.YTick at 0x7241409ee960>,\n",
+       " <matplotlib.axis.YTick at 0x7241409ee300>,\n",
+       " <matplotlib.axis.YTick at 0x7241409ef080>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -423,6 +423,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.graph.Graph at 0x724142031d00>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_logical_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntx.write_gml(full_logical_graph, 'graph.gml')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -431,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bim-des",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
