ipynb notebook: compute travel times for room swap scenarios

--- a/paper_rev3/ifc_parsing.ipynb
+++ b/paper_rev3/ifc_parsing.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +641,316 @@
     "nodes = [n[1:] for n in full_logical_graph.nodes]\n",
     "ax.set_xticks(range(18), nodes)\n",
     "_ = ax.set_yticks(range(18), nodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Runner times\n",
+    "\n",
+    "### Base config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>runner_journey</th>\n",
+       "      <th>runner_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(reception, cutup)</td>\n",
+       "      <td>8.452306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(cutup, processing)</td>\n",
+       "      <td>6.968697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(processing, microtomy)</td>\n",
+       "      <td>28.089256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(microtomy, staining)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(staining, labelling)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(labelling, scanning)</td>\n",
+       "      <td>86.898479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(scanning, qc)</td>\n",
+       "      <td>86.898479</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            runner_journey  runner_time\n",
+       "0       (reception, cutup)     8.452306\n",
+       "1      (cutup, processing)     6.968697\n",
+       "2  (processing, microtomy)    28.089256\n",
+       "3    (microtomy, staining)     3.678511\n",
+       "4    (staining, labelling)     3.678511\n",
+       "5    (labelling, scanning)    86.898479\n",
+       "6           (scanning, qc)    86.898479"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from histopath_bim_des.bim import runner_times\n",
+    "\n",
+    "\n",
+    "rt = runner_times(bim_model, cfg)\n",
+    "df = pd.DataFrame(\n",
+    "    [[str(k).replace(\"'\",''), v] for k,v in rt.items()],\n",
+    "    columns=['runner_journey', 'runner_time']\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Room-swap scenarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>runner_journey</th>\n",
+       "      <th>runner_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(reception, cutup)</td>\n",
+       "      <td>8.452306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(cutup, processing)</td>\n",
+       "      <td>6.968697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(processing, microtomy)</td>\n",
+       "      <td>28.089256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(microtomy, staining)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(staining, labelling)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(labelling, scanning)</td>\n",
+       "      <td>1.839256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(scanning, qc)</td>\n",
+       "      <td>1.839256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            runner_journey  runner_time\n",
+       "0       (reception, cutup)     8.452306\n",
+       "1      (cutup, processing)     6.968697\n",
+       "2  (processing, microtomy)    28.089256\n",
+       "3    (microtomy, staining)     3.678511\n",
+       "4    (staining, labelling)     3.678511\n",
+       "5    (labelling, scanning)     1.839256\n",
+       "6           (scanning, qc)     1.839256"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg2 = cfg.copy()\n",
+    "cfg2.door_map.scanning = 'd17'\n",
+    "\n",
+    "rt2 = runner_times(bim_model, cfg2)\n",
+    "df2 = pd.DataFrame(\n",
+    "    [[str(k).replace(\"'\",''), v] for k,v in rt2.items()],\n",
+    "    columns=['runner_journey', 'runner_time']\n",
+    ")\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>runner_journey</th>\n",
+       "      <th>runner_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(reception, cutup)</td>\n",
+       "      <td>8.452306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(cutup, processing)</td>\n",
+       "      <td>6.968697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(processing, microtomy)</td>\n",
+       "      <td>28.089256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(microtomy, staining)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(staining, labelling)</td>\n",
+       "      <td>3.678511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(labelling, scanning)</td>\n",
+       "      <td>23.261845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(scanning, qc)</td>\n",
+       "      <td>23.261845</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            runner_journey  runner_time\n",
+       "0       (reception, cutup)     8.452306\n",
+       "1      (cutup, processing)     6.968697\n",
+       "2  (processing, microtomy)    28.089256\n",
+       "3    (microtomy, staining)     3.678511\n",
+       "4    (staining, labelling)     3.678511\n",
+       "5    (labelling, scanning)    23.261845\n",
+       "6           (scanning, qc)    23.261845"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg3 = cfg.copy()\n",
+    "cfg3.door_map.scanning = 'd18'\n",
+    "\n",
+    "rt3 = runner_times(bim_model, cfg3)\n",
+    "df3 = pd.DataFrame(\n",
+    "    [[str(k).replace(\"'\",''), v] for k,v in rt3.items()],\n",
+    "    columns=['runner_journey', 'runner_time']\n",
+    ")\n",
+    "df3"
    ]
   },
   {
