--- a/paper_rev3_v2/room_swap.ipynb
+++ b/paper_rev3_v2/room_swap.ipynb
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "histopath-bim-des-py3.12",
    "language": "python",
    "name": "python3"
   },
